--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,10 @@
     <string name="hace_cardview">Hace</string>
     <string name="dias_cardview">" 4 dias"</string>
     <string name="me_gusta_cardview">" 10 Me gusta"</string>
+    <string name="buscar_item">Buscar</string>
+    <string name="home_item">Home</string>
+    <string name="profile">Yo</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
