--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,4 +12,8 @@
     <string name="buscar_item">Buscar</string>
     <string name="home_item">Home</string>
     <string name="profile">Yo</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_home_fragment">Home</string>
+    <string name="text_megusta_image_detail">me gusta</string>
+    <string name="text_cantidad_megusta_image_detail">10</string>
 </resources>
